ejercicio tecnico paula tormo

--- a/borrador_tecnico.ipynb
+++ b/borrador_tecnico.ipynb
@@ -118,7 +118,7 @@
     "inventario = [{\"nombre\": \"altavoces\", \"precio\": 100, \"cantidad\": 20}, {\"nombre\": \"ordenador\", \"precio\": 500, \"cantidad\": 30}]\n",
     "producto = input(\"Indique el producto que desea valorar en el inventario\").lower()\n",
     "nombre = nombre.lower()\n",
-    "precio\n",
+    "precio #definir variables(?) prueba siguiente\n",
     "\n",
     "for producto in inventario:\n",
     "    if producto[\"nombre\"].lower() == nombre:\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "id": "14d27873",
    "metadata": {},
    "outputs": [
@@ -180,11 +180,11 @@
    "source": [
     "inventario = []\n",
     "nombre = input(\"introduce un producto\").lower()\n",
-    "precio = float(input(f\"introduce el precio de {nombre}\"))\n",
-    "cantidad = int(input(f\"introduce la cantidad de {nombre}\"))\n",
+    "precio = float(input(f\"introduce el precio de {nombre}\")) #float queda bien para que coja los nums\n",
+    "cantidad = int(input(f\"introduce la cantidad de {nombre}\")) #int para cantidad porque no puede tener , lo q sea\n",
     "\n",
     "for producto in inventario:\n",
-    "    if producto['nombre'].lower() == nombre:\n",
+    "    if producto['nombre'].lower() == nombre: #no se porq a veces coge o no lower\n",
     "        producto['cantidad'] += cantidad\n",
     "        print(f\"Producto existente. Se ha actualizado la cantidad de '{nombre}' a {producto['cantidad']}.\")\n",
     "        \n",
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "765a13b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def agregar_productos(nombre, precio, cantidad):\n",
     "    inventario = []\n",
-    "    for producto in inventario1:\n",
+    "    for producto in inventario:\n",
     "        if producto['nombre'] == nombre:\n",
     "            producto['cantidad'] += cantidad\n",
     "            print(f\"Producto existente. Se ha actualizado la cantidad de '{nombre}' a {producto['cantidad']}.\")\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 175,
    "id": "bcfe5739",
    "metadata": {},
    "outputs": [
@@ -254,29 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 176,
    "id": "3d6af647",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'inventario1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[169], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(inventario1)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'inventario1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'nombre': 'movil', 'precio': 100.0, 'cantidad': 1}]\n"
      ]
     }
    ],
    "source": [
-    "print(inventario1)"
+    "print(inventario)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 177,
    "id": "bbeb77af",
    "metadata": {},
    "outputs": [
@@ -284,9 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: altavoces, precio: 100€, cantidad: 21\n",
-      "Nombre: ordenador, precio: 500€, cantidad: 30\n",
-      "Nombre: altavoces, precio: 100.0€, cantidad: 1\n"
+      "Nombre: movil, precio: 100.0€, cantidad: 1\n"
      ]
     }
    ],
@@ -298,19 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "c0edd3bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ver_inventario(inventario):\n",
     "    for producto in inventario:\n",
-    "        print(f\"Nombre: {producto[\"nombre\"]}, precio: {producto[\"precio\"]}€, cantidad: {producto[\"cantidad\"]}\")\n"
+    "        print(f\"Nombre: {producto[\"nombre\"]}, precio: {producto[\"precio\"]}€, cantidad: {producto[\"cantidad\"]}\") #misma estrucutra ejer1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 179,
    "id": "e930f95b",
    "metadata": {},
    "outputs": [
@@ -318,9 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: altavoces, precio: 100€, cantidad: 21\n",
-      "Nombre: ordenador, precio: 500€, cantidad: 30\n",
-      "Nombre: altavoces, precio: 100.0€, cantidad: 1\n"
+      "Nombre: movil, precio: 100.0€, cantidad: 1\n"
      ]
     }
    ],
@@ -364,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 184,
    "id": "2207ab95",
    "metadata": {},
    "outputs": [
@@ -372,9 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'nombre': 'altavoces', 'precio': 100, 'cantidad': 21}\n",
-      "{'nombre': 'ordenador', 'precio': 500, 'cantidad': 30}\n",
-      "{'nombre': 'altavoces', 'precio': 100.0, 'cantidad': 1}\n"
+      "{'nombre': 'movil', 'precio': 100.0, 'cantidad': 1}\n"
      ]
     }
    ],
@@ -383,12 +373,12 @@
     "    print(nombre)\n",
     "    \n",
     "    if nombre == producto[\"nombre\"]:\n",
-    "        print(values())"
+    "        print(keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 186,
    "id": "951d0ee7",
    "metadata": {},
    "outputs": [
@@ -396,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "altavoces\n"
+      "movil\n"
      ]
     }
    ],
@@ -406,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 185,
    "id": "70a2763a",
    "metadata": {},
    "outputs": [
@@ -414,8 +404,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100, 21\n",
-      "500, 30\n",
       "100.0, 1\n"
      ]
     }
@@ -427,24 +415,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 194,
+   "id": "41c6dc3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for producto in inventario:\n",
+    "    if nombre == producto['nombre']:\n",
+    "        print(f\"precio: {producto[\"precio\"]}€, cantidad: {producto[\"cantidad\"]}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eba1c9c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "debd79d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buscar_producto(nombre): # para que \n",
+    "def buscar_producto(nombre): # para que busque por nombre\n",
     "\n",
     "    for producto in inventario:\n",
     "            if nombre == producto['nombre']:\n",
-    "                  print(f\"{producto['precio']}, {producto['cantidad']}\")\n",
-    "                  return # para que vuelva si lo encuentra en el inventario\n",
+    "                  print(f\"{producto['precio']}, {producto['cantidad']}\") #funcionaba en ejer1. tb aqui\n",
+    "                  return # para que vuelva si lo encuentra en el inventario (?) probar con más de uno\n",
     "\n",
-    "    print(\"El producto no aparece en el inventario.Pruebe con otro.\")"
+    "    print(f\"El producto {nombre} no aparece en el inventario.Pruebe con otro.\") #mejor con nombre para que esté más claro el mensaje"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 198,
    "id": "edbb6901",
    "metadata": {},
    "outputs": [
@@ -452,12 +461,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto no aparece en el inventario.Pruebe con otro\n"
+      "El producto ordenador no aparece en el inventario.Pruebe con otro.\n"
      ]
     }
    ],
    "source": [
-    "buscar_producto(\"perro\")"
+    "buscar_producto(\"ordenador\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d83170e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "actualizar_stock(self, nombre, cantidad)\n",
+    " : Actualiza el stock de un producto en el\n",
+    " inventario. Debe recibir el nombre del producto y la cantidad a agregar o quitar como parámetros.\n",
+    " Utiliza un bucle \n",
+    "for\n",
+    " para recorrer el inventario.\n",
+    " Busca el producto por nombre.\n",
+    " Actualiza la cantidad según la entrada del usuario.\n",
+    " Si el producto no esta en el inventario muestra un mensaje indicándolo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760c1498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for producto in inventario:\n",
+    "    if nombre in inventario:\n",
+    "        producto['cantidad'] += cantidad\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"El producto {nombre} no está en el inventario. Pruebe con otro.\")\n"
    ]
   }
  ],
