--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ca746d5c",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,10 @@
     "            self.inventario.append(producto_nuevo)\n",
     "            print(f\"El producto {producto_nuevo} ha sido añadido con éxito con una cantidad de {cantidad} y un precio de {precio}\")\n",
     "    \n",
-    "    def ver_inventario(self):\n",
+    "    def ver_inventario(self, producto):\n",
     "\n",
     "        for producto in self.inventario:\n",
-    "            print(f\"Nombre: {producto[\"nombre\"]}, precio: {producto[\"precio\"]}, cantidad {producto[\"cantidad\"]}\")\n",
+    "            print(f\"Nombre: {producto[\"nombre\"]}, Precio: {producto[\"precio\"]}€, Cantidad {producto[\"cantidad\"]}\")\n",
     "\n",
     "\n",
     "        "
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "fb71261e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "5808677b",
    "metadata": {},
    "outputs": [
@@ -64,18 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
+   "id": "02545722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto {'nombre': 'ordenador', 'precio': 600, 'cantidad': 8} ya existe, se ha actualizado a una cantidad de 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.agregar_productos(\"ordenador\",600,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "0fa1f1a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'ordenador', 'precio': 600, 'cantidad': 4}],\n",
+       "{'inventario': [{'nombre': 'ordenador', 'precio': 600, 'cantidad': 8}],\n",
        " 'ventas_totales': 0}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,22 +105,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f69c306",
+   "id": "b4d2a30f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5f1dfef3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'agregar_productos' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m agregar_productos(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mordenador\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'agregar_productos' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: ordenador, precio: 600, cantidad 8\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "tienda.ver_inventario(\"ordenador\")"
+   ]
   }
  ],
  "metadata": {
