ejercicio tecnico paula tormo

--- a/borrador_tecnico.ipynb
+++ b/borrador_tecnico.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "370c605a",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "32582476",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "26b9b89d",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m inventario \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maltavoces\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m20\u001b[39m}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mordenador\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m500\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m30\u001b[39m}]\n\u001b[0;32m      2\u001b[0m producto \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndique el producto que desea valorar en el inventario\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m----> 3\u001b[0m nombre \u001b[38;5;241m=\u001b[39m nombre\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m      4\u001b[0m precio \u001b[38;5;66;03m#definir variables(?) prueba siguiente\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m inventario:\n",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m inventario \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maltavoces\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m20\u001b[39m}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mordenador\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m500\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m30\u001b[39m}]\n\u001b[0;32m      2\u001b[0m producto \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndique el producto que desea valorar en el inventario\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m----> 3\u001b[0m nombre \u001b[38;5;241m=\u001b[39m nombre\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m      4\u001b[0m precio \u001b[38;5;66;03m#definir variables(?) prueba siguiente\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m inventario:\n",
       "\u001b[1;31mNameError\u001b[0m: name 'nombre' is not defined"
      ]
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "14d27873",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "a3dda2e3",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a6f519c3",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "31a2065c",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "79b9e671",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "39f8224c",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "cd1ac3d1",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "31ea9f4f",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "2ab2702a",
    "metadata": {},
    "outputs": [
@@ -364,8 +364,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m agregar_productos(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImpresora\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[22], line 3\u001b[0m, in \u001b[0;36magregar_productos\u001b[1;34m(nombre, precio, cantidad)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21magregar_productos\u001b[39m(nombre, precio, cantidad):\n\u001b[0;32m      2\u001b[0m     inventario \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m producto \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m inventario:\n\u001b[0;32m      4\u001b[0m         producto_nuevo \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m'\u001b[39m: nombre, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m'\u001b[39m: precio, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m'\u001b[39m: cantidad}\n\u001b[0;32m      5\u001b[0m         inventario\u001b[38;5;241m.\u001b[39mappend(producto_nuevo) \u001b[38;5;66;03m#por q no va???\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m agregar_productos(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImpresora\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m, in \u001b[0;36magregar_productos\u001b[1;34m(nombre, precio, cantidad)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21magregar_productos\u001b[39m(nombre, precio, cantidad):\n\u001b[0;32m      2\u001b[0m     inventario \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m producto \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m inventario:\n\u001b[0;32m      4\u001b[0m         producto_nuevo \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m'\u001b[39m: nombre, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m'\u001b[39m: precio, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m'\u001b[39m: cantidad}\n\u001b[0;32m      5\u001b[0m         inventario\u001b[38;5;241m.\u001b[39mappend(producto_nuevo) \u001b[38;5;66;03m#por q no va??? probar otra manera (?\u001b[39;00m\n",
       "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'producto' where it is not associated with a value"
      ]
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3d6af647",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "bbeb77af",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "c0edd3bb",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e930f95b",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: cargador, precio: 20.0€, cantidad: 1\n"
+      "Nombre: ordenador, precio: 200.0€, cantidad: 2\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "e4045a2c",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "2207ab95",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "951d0ee7",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "70a2763a",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.0, 1\n"
+      "200.0, 2\n"
      ]
     }
    ],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "41c6dc3f",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "debd79d4",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "edbb6901",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "8ae547af",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "44bec42b",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "5c8e81a1",
    "metadata": {},
    "outputs": [
@@ -705,10 +705,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f1837e5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este producto no existe en el inventario. Pruebe con otro producto.\n"
+     ]
+    }
+   ],
    "source": [
     "# quiero hacer asignacion directa de la cantidad actualizada(?)\n",
     "nueva_cantidad = int(input(\"Introduce la cantidad de stock que desea añadir, en númer positivo o quitar, con número en negativo.\"))\n",
@@ -745,27 +753,76 @@
     }
    ],
    "source": [
-    "encuentra_producto: input(\"encuentra producto\")\n",
+    "encuentra_producto = input(\"encuentra producto\") #falta crear def y añadir al ejer.tec ESTE SII\n",
     "nueva_cantidad = int(input(\"cantidad a valorar\"))\n",
     "\n",
-    "for nombre in inventario: \n",
+    "for producto in inventario:\n",
     "    if producto['nombre'] == encuentra_producto: \n",
     "        if nueva_cantidad > cantidad:\n",
     "            producto['cantidad'] += nueva_cantidad \n",
-    "            print(f\"La cantidad{cantidad} se ha actualizado a {nueva_cantidad} en el inventario.\") #funciona asiganacion directa, mensaje raro\n",
+    "            print(f\"La cantidad añadida ha sido de {nueva_cantidad} más, actualmente hay {producto['cantidad']} en el inventario.\")\n",
     "\n",
     "        elif nueva_cantidad < cantidad:\n",
     "            producto['cantidad'] -= cantidad\n",
-    "            (f\"La cantidad{cantidad} se ha actualizado a {nueva_cantidad} en el inventario.\")\n",
+    "            print(f\"La cantidad añadida ha sido de {nueva_cantidad} menos, actualmente hay {cantidad['cantidad']} en el inventario.\")\n",
+    "        \n",
+    "        break\n",
     "            # antes del else, se me ha actualizado, de cantidad 2, más 3 de nueva cantidad a 5, ya no va \n",
+    "            #yafunciona!!! ten cuidado con identar\n",
     "\n",
     "else:\n",
-    "    print(\"Este producto no existe en el inventario. Pruebe con otro producto.\")"
+    "    print(\"Este producto no existe en el inventario. Pruebe con otro producto.\") #esto tendria que ir fuera, para que no ejecute lo de antes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "id": "cccad30b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "df42675d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad 11 ha sido actualizada a 3 más.\n",
+      "Este producto no existe en el inventario. Pruebe con otro producto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "encuentra_producto: input(\"encuentra producto\")\n",
+    "nueva_cantidad = int(input(\"cantidad a valorar\"))\n",
+    "\n",
+    "\n",
+    "for producto in inventario:\n",
+    "    if producto['nombre'] == encuentra_producto: \n",
+    "        if nueva_cantidad > cantidad:\n",
+    "            producto['cantidad'] += nueva_cantidad \n",
+    "            print(f\"La cantidad {producto['cantidad']} ha sido actualizada a {nueva_cantidad} más.\")\n",
+    "\n",
+    "        elif nueva_cantidad < cantidad:\n",
+    "            producto['cantidad'] -= cantidad\n",
+    "            print(f\"La cantidad {producto['cantidad']} ha sido actualizada a {nueva_cantidad} menos.\")\n",
+    "            break\n",
+    "            # se han añadido nueva cantidad, y se ha actualizado a productocantidad\n",
+    "            \n",
+    "            # antes del else, se me ha actualizado, de cantidad 2, más 3 de nueva cantidad a 5, ya no va \n",
+    "\n",
+    "else:\n",
+    "        print(\"Este producto no existe en el inventario. Pruebe con otro producto.\") #esto tendria que ir fuera, para que no ejecute lo de antes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2bfe0096",
    "metadata": {},
    "outputs": [
@@ -783,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0e4a94c7",
    "metadata": {},
    "outputs": [
@@ -791,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'nombre': 'ordenador', 'precio': 200.0, 'cantidad': 5}]\n"
+      "[{'nombre': 'ordenador', 'precio': 200.0, 'cantidad': 20}]\n"
      ]
     }
    ],
